Projet_GL/src/test/deca/context/valid/unprovided/testObjet/new.deca
// Description:
//   Définition d'une classe et initialisation d'une instance de cette classe
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 22/01/2018

class A {
}

{
	A a = new A();
}
	